[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/runningSprites/aberlin/AberlinFinal.png" type="Texture" id=1]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin2.png" type="Texture" id=2]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin5.png" type="Texture" id=3]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin6.png" type="Texture" id=4]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin4.png" type="Texture" id=5]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin3.png" type="Texture" id=6]
[ext_resource path="res://assets/runningSprites/aberlin/Aberlin1.png" type="Texture" id=7]
[ext_resource path="res://assets/runningSprites/aberlin/AberlinStart.png" type="Texture" id=8]
[ext_resource path="res://assets/LadyAberlin.png" type="Texture" id=9]
[ext_resource path="res://scripts/neighbor.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=3]
radius = 215.037

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 2 ), ExtResource( 9 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 12.0
height = 10.0

[node name="Neighbor" type="KinematicBody2D"]
script = ExtResource( 10 )

[node name="RogerArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RogerArea2D"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -29 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 0 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="WanderTimer" type="Timer" parent="."]

[connection signal="body_entered" from="RogerArea2D" to="." method="_on_RogerArea2D_body_entered"]
[connection signal="timeout" from="WanderTimer" to="." method="_on_WanderTimer_timeout"]
